# talos

./: .gitignore  AddHostFunction.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  testsuite_report.txt
.github/scripts/: testsuite_diff.py
codelib/: CodeLib.lean  lake-manifest.json  lakefile.toml
docbuild/: lake-manifest.json  lakefile.toml
interpreter/: Interpreter.lean  lake-manifest.json  lakefile.toml
programs/: Programs.lean  lake-manifest.json  lakefile.toml
programs/rust/: Cargo.toml
programs/rust/crates/itoa/: Cargo.toml  verifier.toml
programs/rust/crates/itoa/src/: lib.rs
programs/rust/crates/num_integer/: Cargo.toml  verifier.toml
programs/rust/crates/num_integer/src/: lib.rs
programs/rust/float_minmax/: Cargo.toml
programs/rust/float_minmax/src/: exports.rs
programs/rust/float_reinterpret/: Cargo.toml
programs/rust/float_reinterpret/src/: exports.rs  lib.rs
programs/rust/float_round/: Cargo.toml
programs/rust/float_round/src/: exports.rs
programs/rust/float_trunc/: Cargo.toml
programs/rust/float_trunc/src/: exports.rs
programs/rust/num_integer_opt3/: Cargo.toml
programs/rust/num_integer_opt3/src/: exports.rs  lib.rs
programs/rust/rust_std/option/: Cargo.toml  verifier.toml
programs/rust/rust_std/option/src/: lib.rs
programs/rust/simple/is_even/: Cargo.toml  verifier.toml
programs/rust/simple/is_even/src/: lib.rs
programs/rust/simple/memchr/: Cargo.toml  verifier.toml
programs/rust/simple/memchr/src/: lib.rs
programs/rust/simple/reverse_inplace/: Cargo.toml  verifier.toml
programs/rust/simple/reverse_inplace/src/: lib.rs
programs/rust/simple/xor_sum/: Cargo.toml  verifier.toml
programs/rust/simple/xor_sum/src/: lib.rs
programs/rust/swap_elements_opt3/: Cargo.toml
programs/rust/swap_elements_opt3/src/: exports.rs  lib.rs
programs/rust/xor_sum/src/: exports.rs  lib.rs
report/: README.md  package-lock.json  package.json
verifier/: .lake  EXTRACT.md  README.md  Verifier.lean  lake-manifest.json  lakefile.toml
(+191 files in other folders)
