[workspace]
resolver = "2"
members = [
  "swap_elements",
  "rust_array",
  "rust_array_tests",
  "rust_u64_tests",
  "num_integer",
  "rust_u64",
  "total_variation",
  "float_trunc",
  "float_minmax",
  "float_round",
  "float_reinterpret",
]
[profile.release]
opt-level = 0
lto = false
codegen-units = 1